<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        tools:ignore="MenuTitle"
        android:title="@string/home_bottom_nav"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/information"
        tools:ignore="MenuTitle"
        android:title="@string/information"
        android:icon="@drawable/ic_information"/>
    <item
        android:id="@+id/service"
        tools:ignore="MenuTitle"
        android:title="@string/service"
        android:icon="@drawable/ic_services"/>
    <item
        android:id="@+id/group"
        tools:ignore="MenuTitle"
        android:title="@string/group"
        android:icon="@drawable/ic_group"/>
    <item
        android:id="@+id/idea"
        android:title="@string/idea"
        android:icon="@drawable/ic_idea"
        tools:ignore="MenuTitle" />
</menu>