<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center|top"
            android:id="@+id/txtNameSeries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:fontFamily="@font/kanit_semibold"
            android:textColor="@color/colorBigText"
            android:textSize="@dimen/sp_28"
            android:textStyle="normal"
            android:text="@string/minus" />
        <TextView
            android:layout_marginTop="@dimen/dp_48"
            android:layout_gravity="center|top"
            android:id="@+id/txtgroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_20"
            android:fontFamily="@font/kanit_light"
            android:textColor="@color/color_414141"
            android:textSize="@dimen/sp_12"
            android:textStyle="normal"
            android:text="@string/tractor_model" />
        <View
            android:layout_width="match_parent"
            android:layout_gravity="center|bottom"
            android:layout_height="@dimen/dp_2"
            android:background="@color/color_F3F3F3"></View>
    </FrameLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_gravity="top|center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kanit_medium"
                android:layout_marginTop="@dimen/dp_8"
                android:textColor="@color/color_414141"
                android:textSize="@dimen/sp_14"
                android:textStyle="normal"
                android:text="@string/horse_power_uppercase" />
            <TextView
                android:layout_gravity="center|top"
                android:layout_marginTop="@dimen/dp_23"
                android:id="@+id/txtHorsePower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kanit_semibold"
                android:textColor="@color/colorBigText"
                android:textSize="@dimen/sp_28"
                android:textStyle="normal"
                android:text="@string/minus"/>
            <TextView
                android:layout_gravity="center|top"
                android:id="@+id/textView5"
                android:layout_marginTop="@dimen/dp_60"
                android:layout_marginBottom="@dimen/dp_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kanit_regular"
                android:textColor="@color/color_414141"
                android:textSize="@dimen/sp_14"
                android:textStyle="normal"
                android:text="@string/horse_power_lowercase"/>
        </FrameLayout>
        <View
            android:layout_width="@dimen/dp_2"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:background="@color/color_F3F3F3"></View>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_marginTop="@dimen/dp_8"
                android:layout_gravity="center|top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kanit_medium"
                android:textColor="@color/color_414141"
                android:textSize="@dimen/sp_14"
                android:textStyle="normal"
                android:text="@string/text_price" />
            <TextView
                android:id="@+id/txtPrice"
                android:layout_marginTop="@dimen/dp_23"
                android:layout_gravity="center|top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="-8dp"
                android:fontFamily="@font/kanit_semibold"
                android:textColor="@color/colorBigText"
                android:textSize="@dimen/sp_28"
                android:textStyle="normal"
                android:text="@string/minus"/>
            <TextView
                android:layout_marginTop="@dimen/dp_60"
                android:layout_gravity="center|top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_7"
                android:fontFamily="@font/kanit_regular"
                android:textColor="@color/color_414141"
                android:textSize="@dimen/sp_14"
                android:textStyle="normal"
                android:text="@string/bath"/>
        </FrameLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_gravity="center|bottom"
        android:layout_height="@dimen/dp_2"
        android:background="@color/color_F3F3F3"></View>
</LinearLayout>