<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/dp_0">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/constraintLayout"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintDowloaded"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/dp_16"
            android:paddingTop="@dimen/dp_20"
            android:paddingRight="@dimen/dp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgColumn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:src="@drawable/ic_column"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtTitleDowloaded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_7"
                android:singleLine="true"
                android:maxLength="10"
                android:fontFamily="@font/kanit_medium"
                android:text="@string/repair_manual"
                android:textColor="@color/color_414141"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toEndOf="@id/imgColumn"
                app:layout_constraintBottom_toTopOf="@+id/tvLanguageDowloaded"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLanguageDowloaded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_7"
                android:layout_marginBottom="@dimen/dp_12"
                android:fontFamily="@font/kanit_light"
                android:text="@string/thai_language"
                android:singleLine="true"
                android:maxLength="20"
                android:textColor="@color/color_5A5A5A"
                android:textSize="@dimen/sp_12"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgColumn"
                app:layout_constraintTop_toBottomOf="@id/txtTitleDowloaded">

            </TextView>


            <TextView
                android:id="@+id/btnOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:background="@drawable/ripple_effect_sub_button_item"
                android:fontFamily="@font/kanit_light"
                android:paddingLeft="@dimen/dp_14"
                android:paddingTop="@dimen/dp_3"
                android:paddingRight="@dimen/dp_13"
                android:paddingBottom="@dimen/dp_5"
                android:text="@string/dowloaded"
                android:textColor="@color/color_009E9E"
                android:textSize="@dimen/dp_12"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtL308"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_21"
                android:fontFamily="@font/kanit_medium"
                android:text="@string/l3008"
                android:maxLength="20"
                android:textColor="@color/color_414141"
                android:textSize="@dimen/sp_14"
                app:layout_constraintEnd_toStartOf="@+id/btnOpen"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtTitleM"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_12"
                android:fontFamily="@font/kanit_light"
                android:text="@string/tractor"
                android:singleLine="true"
                android:gravity="right"
                android:textColor="@color/color_5A5A5A"
                android:textSize="@dimen/sp_12"
                android:maxLength="20"
                android:layout_marginEnd="@dimen/dp_17"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnOpen"
                app:layout_constraintTop_toBottomOf="@id/txtL308" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>