<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="informationViewModel"
            type="net.mindzone.robroo.ui.main.information.InformationViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_28"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded_corner"
            android:gravity="center"
            android:orientation="vertical">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvNewsFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_18"
                android:text="@string/filter_manual_product"
                android:textColor="@color/color_A5A5A5"
                android:textSize="@dimen/sp_12"
                app:fontFamily="@font/kanit_regular"/>
            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/dp_18"
                android:background="@color/color_BFBDBE"/>

            <TextView
                android:id="@+id/tv_latest_manual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/dp_120"
                android:paddingLeft="@dimen/dp_120"
                android:layout_marginTop="@dimen/dp_18"
                android:text="@string/string_latest_manual"
                android:textColor="@color/color_2680EB"
                android:textSize="@dimen/sp_20"
                app:fontFamily="@font/kanit_regular"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                tools:ignore="UnusedAttribute"/>

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/dp_18"
                android:background="@color/color_BFBDBE" />

            <TextView
                android:id="@+id/tvfrequently_used_guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/dp_90"
                android:paddingLeft="@dimen/dp_90"
               android:layout_marginBottom="@dimen/dp_18"
                android:layout_marginTop="@dimen/dp_18"
                android:text="@string/frequently_used_guide"
                android:textColor="@color/color_2680EB"
                android:textSize="@dimen/sp_20"
                app:fontFamily="@font/kanit_regular"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                tools:ignore="UnusedAttribute"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center"
            android:background="@drawable/shape_rounded_corner"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            tools:ignore="UnusedAttribute">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingVertical="@dimen/dp_16"
                android:text="@string/cancel"
                android:id="@+id/tvCancelBottomsheet"
                android:textColor="@color/color_2680EB"
                android:textSize="@dimen/sp_20"
                app:fontFamily="@font/kanit_bold" />
        </LinearLayout>
    </LinearLayout>

</layout>