<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragmentViewModel"
            type="net.mindzone.robroo.ui.main.share.listShare.ShareViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_28"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded_corner"
            android:gravity="center"
            android:orientation="vertical">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvNewsFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:gravity="center"
                android:text="@string/news_filter"
                android:textColor="@color/color_A5A5A5"
                android:textSize="@dimen/sp_12"
                app:fontFamily="@font/kanit_regular"/>
            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/dp_17"
                android:background="@color/color_707070"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvPopularOpinion"
                android:paddingVertical="@dimen/dp_10"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:text="@string/popular_opinion"
                android:textColor="@color/color_2680EB"
                android:textSize="@dimen/sp_20"
                app:fontFamily="@font/kanit_regular"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                tools:ignore="UnusedAttribute"/>

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/dp_17"
                android:background="@color/color_707070" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLatestNews"
                android:layout_width="match_parent"
                android:gravity="center"
                android:paddingVertical="@dimen/dp_10"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:layout_marginBottom="@dimen/dp_17"
                android:text="@string/recent_topics"
                android:textColor="@color/color_2680EB"
                android:textSize="@dimen/sp_20"
                app:fontFamily="@font/kanit_regular"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                tools:ignore="UnusedAttribute"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center"
            android:background="@drawable/shape_rounded_corner"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            tools:ignore="UnusedAttribute">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent"
                android:paddingVertical="@dimen/dp_16"
                android:text="@string/cancel"
                android:textColor="@color/color_2680EB"
                android:textSize="@dimen/sp_20"
                app:fontFamily="@font/kanit_bold" />
        </LinearLayout>
    </LinearLayout>

</layout>